[project]
name = "quickertune"
version = "0.1.0"
dependencies = [
  "torch >= 2.0.0",
  "torchvision >= 0.15.1",
  "ConfigSpace >= 0.6.0, < 1",
  "gpytorch >= 1.9.0",
  "numpy < 2",
  "pandas >= 2.0.0",
  "pyyaml >= 6.0.1",
  "scikit-learn >= 1.1",
  "timm >= 0.9.16",
  "tqdm >= 4.66.0",
]
requires-python = ">=3.10"
authors = [{ name = "Lugevid", email = "xyz@cs.uni-freiburg.de" }]
description = "AutoML SS24 Exam - QuickTune"
classifiers = [
  'Intended Audience :: Science/Research',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: BSD License',
  'Programming Language :: Python',
  'Topic :: Software Development',
  'Topic :: Scientific/Engineering',
  'Operating System :: POSIX',
  'Operating System :: Unix',
  'Programming Language :: Python :: 3',
]
license = { file = "LICENSE" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.*"]

